Mon Apr 11 17:21:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx.h:
          Another try to fix qnx 6.3

Mon Apr 11 06:30:07 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Added support for no-optimize-sibling-calls

Sun Apr 10 18:04:19 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx.h:
          Don't define _QNX_SOURCE, already defined by default

Sun Apr 10 17:32:22 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx.h:
          qnx63 has much less than qnx65

Sun Apr 10 17:03:49 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx.h:
          Made some fixes for qnx65

        * include/makeinclude/platform_qnx_gcc.GNU:
          Simplified

Sun Apr 10 14:58:13 UTC 2011  Phil Mesnier  <mesnier_p@ociwb.com>

        * tests/run_test.lst:
        * tests/tests.mpc:

          Bug_3943_Regression_Test needs to avoid ace_for_tao.

Sat Apr  9 12:56:05 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Bug_3943_Regression_Test.cpp:

          Scoreboard cleanup.

Sat Apr  9 08:29:15 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx.h:
          Added ACE_LACKS_ISWBLANK

Fri Apr  8 21:55:21 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_sys_socket.cpp:

        * tests/Bug_3943_Regression_Test.cpp:

          Clean up code for non-windows builds. The test now runs on
          non-windows, although the 3943 regression isn't actually
          evaluated as the error is windows specfic.

Fri Apr  8 13:35:54 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * ace/config-linux.h:
        * include/makeinclude/platform_linux_clang.GNU:

          Support for the Clang C++ compiler (http://clang.llvm.org) on Linux.

Fri Apr  8 13:15:08 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_sys_socket.h: